Loan/return book on list-page.

--- a/src/app/features/book/page/list/list.component.html
+++ b/src/app/features/book/page/list/list.component.html
@@ -46,6 +46,9 @@
           <button mat-icon-button type="button" *ngIf="!book.isLoaned" (click)="loanBook(book)">
             <mat-icon>local_library</mat-icon>
           </button>
+          <button mat-icon-button type="button" *ngIf="book.isLoaned" (click)="returnBook(book)">
+            <mat-icon>local_library</mat-icon>
+          </button>
           <a
             mat-icon-button
             type="button"
