Confirmation modal test

--- a/src/app/shared/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/shared/confirmation-modal/confirmation-modal.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Do you want to do this action?</h1>
 <div mat-dialog-actions [align]="'end'">
-  <button mat-raised-button color="warn" [mat-dialog-close]="false">No</button>
-  <button mat-raised-button color="primary" [mat-dialog-close]="true">Yes</button>
+  <button mat-raised-button color="warn" id="false-close" [mat-dialog-close]="false">No</button>
+  <button mat-raised-button color="primary" id="true-close" [mat-dialog-close]="true">Yes</button>
 </div>
