--- a/src/app/layout/app-layout/app-layout.component.html
+++ b/src/app/layout/app-layout/app-layout.component.html
@@ -11,11 +11,6 @@
         <mat-icon>library_books</mat-icon>
       </a>
       <mat-divider></mat-divider>
-      <a mat-list-item [routerLink]="['myBooks']" [routerLinkActive]="'active'" class="mat-nav-list-item">
-        My books
-        <mat-icon>menu_book</mat-icon>
-      </a>
-      <mat-divider></mat-divider>
       <a mat-list-item (click)="logout()" class="mat-nav-list-item">
         Logout
         <mat-icon></mat-icon>
@@ -33,6 +28,8 @@
       </button>
       <span>Library</span>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
   </mat-sidenav-content>
 </mat-sidenav-container>
