--- a/src/app/features/book/container/form-container/form-container.component.html
+++ b/src/app/features/book/container/form-container/form-container.component.html
@@ -13,7 +13,7 @@
                 placeholder="Title"
                 formControlName="title"
                 [errorStateMatcher]="errorStateMatcher">
-              <mat-error *ngIf="formGroup.get('title').hasError('required')">
+              <mat-error *ngIf="formGroup.get('title')?.hasError('required')">
                 Title is required
               </mat-error>
             </mat-form-field>
@@ -27,10 +27,10 @@
                 placeholder="Author"
                 formControlName="author"
                 [errorStateMatcher]="errorStateMatcher">
-              <mat-error *ngIf="formGroup.get('author').hasError('required')">
+              <mat-error *ngIf="formGroup.get('author')?.hasError('required')">
                 Author is required
               </mat-error>
-              <mat-error *ngIf="formGroup.get('author').hasError('maxLength')">
+              <mat-error *ngIf="formGroup.get('author')?.hasError('maxLength')">
                 Author field should has max. 20 characters
               </mat-error>
             </mat-form-field>
@@ -42,10 +42,10 @@
                 placeholder="Publishing house"
                 formControlName="publishingHouse"
                 [errorStateMatcher]="errorStateMatcher">
-              <mat-error *ngIf="formGroup.get('publishingHouse').hasError('required')">
+              <mat-error *ngIf="formGroup.get('publishingHouse')?.hasError('required')">
                 Publishing house is required
               </mat-error>
-              <mat-error *ngIf="formGroup.get('publishingHouse').hasError('maxLength')">
+              <mat-error *ngIf="formGroup.get('publishingHouse')?.hasError('maxLength')">
                 Publishing house field should has max. 20 characters
               </mat-error>
             </mat-form-field>
@@ -59,10 +59,10 @@
                 pattern="\d*"
                 placeholder="Release year"
                 formControlName="releaseYear" [errorStateMatcher]="errorStateMatcher">
-              <mat-error *ngIf="formGroup.get('releaseYear').hasError('required')">
+              <mat-error *ngIf="formGroup.get('releaseYear')?.hasError('required')">
                 Release year is required
               </mat-error>
-              <mat-error *ngIf="formGroup.get('releaseYear').hasError('minLength')">
+              <mat-error *ngIf="formGroup.get('releaseYear')?.hasError('minLength')">
                 Release year should be 4 and numeric
               </mat-error>
             </mat-form-field>
@@ -87,7 +87,7 @@
                 rows="2"
                 [errorStateMatcher]="errorStateMatcher">
               </textarea>
-              <mat-error *ngIf="formGroup.get('description').hasError('maxLength')">
+              <mat-error *ngIf="formGroup.get('description')?.hasError('maxLength')">
                 Description should have maximum 200 characters
               </mat-error>
             </mat-form-field>
