--- a/src/app/features/auth/page/login/login.component.html
+++ b/src/app/features/auth/page/login/login.component.html
@@ -7,16 +7,29 @@
       <mat-card-content>
         <div class="col">
           <mat-form-field>
-            <input matInput placeholder="email" formControlName="email">
-            <mat-error *ngIf="loginForm.get('email').hasError('required')">
+            <input
+              matInput
+              placeholder="username"
+              formControlName="username"
+              [errorStateMatcher]="errorStateMatcher"
+              required="required"
+            >
+            <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
               Email is <strong>required</strong>
             </mat-error>
           </mat-form-field>
         </div>
         <div class="col">
           <mat-form-field>
-            <input matInput placeholder="password" formControlName="password" type="password">
-            <mat-error *ngIf="loginForm.get('password').hasError('required')">
+            <input
+              matInput
+              placeholder="password"
+              formControlName="password"
+              type="password"
+              [errorStateMatcher]="errorStateMatcher"
+              required="required"
+            >
+            <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
               Password is <strong>required</strong>
             </mat-error>
           </mat-form-field>
