Start mocking http services.

--- a/src/app/features/book/page/list/list.component.html
+++ b/src/app/features/book/page/list/list.component.html
@@ -9,7 +9,7 @@
         <mat-icon>add_circle</mat-icon>
       </a>
       <section fxFlex="50%" fxLayout fxLayoutAlign="space-between center">
-        <span class="ui-float-label">
+        <span class="p-float-label">
         <input pInputText id="float-input" size="30" [formControl]="textInput"/>
           <label for="float-input">Type author</label>
           </span>
