--- a/src/app/features/book/page/detail/book-detail.component.html
+++ b/src/app/features/book/page/detail/book-detail.component.html
@@ -42,5 +42,5 @@
 </mat-card>
 
 <ng-template #loader>
-  <mat-spinner color="accent" mode="indeterminate" *ngIf="isLoading"></mat-spinner>
+  <mat-spinner color="accent" mode="indeterminate" *ngIf="!isLoading"></mat-spinner>
 </ng-template>
