--- a/src/app/features/book/page/detail/book-detail.component.html
+++ b/src/app/features/book/page/detail/book-detail.component.html
@@ -3,14 +3,24 @@
     <mat-card-header>
       <mat-card-title>{{book.title}} ({{book.releasedYear}})</mat-card-title>
       <mat-card-subtitle>Author: {{book.author}}</mat-card-subtitle>
+      <div class="row justify-content-start align-items-center ml-2">
+        <p-rating [(ngModel)]="currentUserRate" [cancel]="false" stars="10" [readonly]="isUserRated"></p-rating>
+        <button
+          *ngIf="!isUserRated"
+          type="button"
+          (click)="addRate()"
+          class="btn btn-sm btn-outline-primary ml-2">Rate
+        </button>
+      </div>
     </mat-card-header>
   </mat-card-header>
   <mat-card-content>
     <section class="card">
       <article class="card-body">
-        <section *ngIf="!isUserCommentedBook" class="row">
-          <form [formGroup]="formGroup" (ngSubmit)="addComment()">
-            <mat-form-field>
+        <section class="row">
+          <div *ngIf="!isUserCommentedBook" class="col-6">
+            <form [formGroup]="formGroup" (ngSubmit)="addComment()">
+              <mat-form-field>
               <textarea
                 matInput
                 placeholder="Comment"
@@ -18,17 +28,18 @@
                 [errorStateMatcher]="errorStateMatcher"
                 [style]="{'min-height': '10vh', 'max-height': '10vh'}"
               ></textarea>
-              <mat-error *ngIf="formGroup.get('comment').getError('required')">
-                Comment is required
-              </mat-error>
-              <mat-error *ngIf="formGroup.get('comment').getError('maxlength') as error">
-                Maximum {{error.requiredLength}} characters
-              </mat-error>
-            </mat-form-field>
-            <button type="submit" class="btn btn-outline-success ml-2">
-              Add comment
-            </button>
-          </form>
+                <mat-error *ngIf="formGroup.get('comment').getError('required')">
+                  Comment is required
+                </mat-error>
+                <mat-error *ngIf="formGroup.get('comment').getError('maxlength') as error">
+                  Maximum {{error.requiredLength}} characters
+                </mat-error>
+              </mat-form-field>
+              <button type="submit" class="btn btn-outline-success ml-2">
+                Add comment
+              </button>
+            </form>
+          </div>
         </section>
         <section class="row">
           <article *ngIf="comments.length" class="col-6 my-3">
