Fix loan/return book

--- a/src/app/features/book/page/list/list.component.html
+++ b/src/app/features/book/page/list/list.component.html
@@ -47,7 +47,7 @@
             <mat-icon>local_library</mat-icon>
           </button>
           <button mat-icon-button type="button" *ngIf="book.isLoaned" (click)="returnBook(book)">
-            <mat-icon>local_library</mat-icon>
+            <mat-icon color="warn">local_library</mat-icon>
           </button>
           <a
             mat-icon-button
