--- a/src/app/features/auth/page/signup/signup.component.html
+++ b/src/app/features/auth/page/signup/signup.component.html
@@ -8,6 +8,7 @@
         <div class="col">
           <mat-form-field>
             <input
+              id="username"
               matInput
               placeholder="username"
               formControlName="username"
@@ -26,6 +27,7 @@
         <div class="col">
           <mat-form-field>
             <input
+              id="password"
               matInput
               placeholder="password"
               formControlName="password"
@@ -43,6 +45,7 @@
         <div class="col">
           <mat-form-field>
             <input
+              id="repeatPassword"
               matInput
               placeholder="repeat password"
               formControlName="repeatPassword"
@@ -61,6 +64,7 @@
         <div class="col">
           <mat-form-field>
             <input
+              id="favouriteAuthor"
               matInput
               placeholder="Favourite author"
               formControlName="favouriteAuthor"
@@ -71,6 +75,7 @@
         <div class="col">
           <mat-form-field>
             <input
+              id="favouriteBook"
               matInput
               placeholder="Favourite book"
               formControlName="favouriteBook"
