--- a/src/app/layout/app-layout/app-layout.component.html
+++ b/src/app/layout/app-layout/app-layout.component.html
@@ -11,7 +11,7 @@
 				<mat-icon>library_books</mat-icon>
 			</a>
 			<mat-divider></mat-divider>
-			<a mat-list-item (click)="logout()" class="mat-nav-list-item">
+			<a mat-list-item (click)="logout()" class="mat-nav-list-item" data-cy="logout">
 				Logout
 				<mat-icon></mat-icon>
 			</a>
