WIP: e2e book module test

--- a/src/app/features/book/page/list/list.component.html
+++ b/src/app/features/book/page/list/list.component.html
@@ -1,6 +1,6 @@
 <section class="grid-container">
 	<mat-card>
-		<mat-toolbar fxLayout fxLayoutAlign="space-between center">
+		<mat-toolbar data-cy="list-toolbar" fxLayout fxLayoutAlign="space-between center">
 			<a
 				*appPermission="['ROLE_ADMINISTRATOR']"
 				mat-icon-button
